--- a/app/src/main/res/xml/mypreferences.xml
+++ b/app/src/main/res/xml/mypreferences.xml
@@ -43,7 +43,21 @@
             android:key="pref_passwd"
             android:title="@string/pref_passwd" />
     </PreferenceCategory>
+    <PreferenceCategory
+        android:title="Miscellaneous"
+        >
+    <SwitchPreference
+        android:defaultValue="false"
+        android:key="pref_tag"
+        android:summary="@string/pref_tag_summ"
+        android:title="@string/pref_tag" />
 
-    
-
+    <EditTextPreference
+        android:dependency="pref_tag"
+        android:inputType="textUri"
+        android:defaultValue="[img]%url[/img]"
+        android:key="pref_tag_txt"
+        android:summary="@string/pref_tag_txt_summ"
+        android:title="@string/pref_tag_txt" />
+    </PreferenceCategory>
 </PreferenceScreen>
