Added error handling, other icons in notification bar and also a btw, last update failed in main if last updated failed, with reason.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="22sp"
-        android:text="Please add a server in preferences" />
+        android:text="@string/add_server" />
 
 </RelativeLayout>
