--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:dasftp="http://schemas.android.com/apk/res-auto" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-            <item android:id="@+id/settings"
-                android:icon="@drawable/ic_action_action_settings"
-                android:title="@string/settings"
-                android:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/settings"
+        android:icon="@drawable/ic_action_action_settings"
+        android:showAsAction="ifRoom"
+        android:title="@string/settings" />
 
 
 </menu>
