--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
         android:textSize="20sp" />
 
     <ImageView
+        android:contentDescription="@string/content_description_warning"
         android:id="@+id/warning"
         android:layout_width="40dp"
         android:layout_height="40dp"
