--- a/app/src/main/res/layout/add_site.xml
+++ b/app/src/main/res/layout/add_site.xml
@@ -133,6 +133,18 @@
         android:layout_marginBottom="5dp"
         android:layout_gravity="end"
         android:checked="false" />
+
+        <Switch
+            android:layout_marginEnd="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/use_keys"
+            android:id="@+id/switch2"
+            android:layout_marginBottom="5dp"
+            android:layout_gravity="end"
+            android:checked="false" />
+
 </LinearLayout>
     <LinearLayout
         style="?android:attr/buttonBarStyle"
@@ -152,6 +164,7 @@
             android:text="@string/add_cancel"
             android:id="@+id/btn_cancel"
             android:layout_gravity="end" />
+
         <Button
             style="?android:attr/buttonBarButtonStyle"
             android:layout_weight="1"
